# hexchat-otr

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.am  README.hexchat  README.md  Readme.md  autogen.sh  configure.ac  meson.build  meson_options.txt  otr_ops.c  otr_util.c  tarballdefs.cmake  xchat_otr.c  xchat_otr.h
data/: io.github.Hexchat.Plugin.OTR.metainfo.xml  meson.build
src/: Makefile.am  formats.txt  hexchat-formats.c  hexchat_otr.c  hexchat_otr.h  makeformats.py  meson.build  otr-formats.h  otr.h  otr_key.c  otr_ops.c  otr_util.c
